src/main/metadata-au/objects/Due_Date_Overdue__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Hour_End_time__c</fullName>
        <label>Business Hour End time</label>
        <picklist>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Hour_start_time__c</fullName>
        <label>Business Hour start time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Priority__c</fullName>
        <label>Lead Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA_Duration__c</fullName>
        <label>SLA Duration (in hrs.)</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Due Date Overdue</label>
    <pluralLabel>Due Date Overdues</pluralLabel>
</CustomObject>  